tests/lti_implicit_instantiation/lti_implicit_instantiation.exp
Error --------------------------------------------------------------------------------------------- async_return.js:8:10

Cannot call await because `T` [1] is underconstrained by await [2]. Either add explicit type arguments or cast the
expression to your expected type. [underconstrained-implicit-instantiation]

   async_return.js:8:10
      8|   return await [][0];
                  ^^^^^^^^^^^ [2]

References:
   <BUILTINS>/core.js:2044:25
   2044| declare function $await<T>(p: Promise<T> | T): T;
                                 ^ [1]


Error ------------------------------------------------------------------------------------------ contextual_ctor.js:5:13

Cannot call `C` because `T` [1] is underconstrained by new `C` [2]. Either add explicit type arguments or cast the
expression to your expected type. [underconstrained-implicit-instantiation]

   contextual_ctor.js:5:13
   5| let x = new C(); // Error
                  ^

References:
   contextual_ctor.js:3:9
   3| class C<T> {}
              ^ [1]
   contextual_ctor.js:5:9
   5| let x = new C(); // Error
              ^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- contextual_jsx.js:6:10

Cannot create `Component` element because `T` [1] is underconstrained by `Component` element [2]. Either add explicit
type arguments or cast the expression to your expected type. [underconstrained-implicit-instantiation]

   contextual_jsx.js:6:10
   6| let x = <Component />; // Error
               ^^^^^^^^^

References:
   contextual_jsx.js:4:20
   4| function Component<T>(props: {foo?: T}): React.Node { return null; }
                         ^ [1]
   contextual_jsx.js:6:9
   6| let x = <Component />; // Error
              ^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ contextual_jsx.js:18:29

Cannot create `ComponentWithBound` element because boolean [1] is incompatible with number [2] in type argument `T`.
[incompatible-type-arg]

   contextual_jsx.js:18:29
   18| <div><ComponentWithBound a={true} /></div>; // error: bool ~> number
                                   ^^^^ [1]

References:
   contextual_jsx.js:17:32
   17| function ComponentWithBound<T: number>(pprops: {a:T}): React$Node {}
                                      ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- issue_9015.js:20:3

Cannot call `c.query` because `R` [1] is underconstrained by call of method `query` [2]. Either add explicit type
arguments or cast the expression to your expected type. [underconstrained-implicit-instantiation]

   issue_9015.js:20:3
   20| c.query('SELECT 1');
         ^^^^^

References:
   issue_9015.js:14:9
   14|   query<R>(config: string): Promise<ResultSet<R>>;
               ^ [1]
   issue_9015.js:20:1
   20| c.query('SELECT 1');
       ^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- no_infer.js:9:9

Cannot call `f2` with `2` bound to `v2` because number [1] is incompatible with string [2]. [incompatible-call]

   no_infer.js:9:9
   9| f2('1', 2); // error: number ~> string
              ^ [1]

References:
   no_infer.js:9:4
   9| f2('1', 2); // error: number ~> string
         ^^^ [2]


Error ------------------------------------------------------------------------------------------------ no_infer.js:11:13

Cannot call `f4` with object literal bound to `v2` because number [1] is incompatible with string [2] in property `f`.
[incompatible-call]

   no_infer.js:11:13
   11| f4('1', {f: 2}); // error: number ~> string
                   ^ [1]

References:
   no_infer.js:11:4
   11| f4('1', {f: 2}); // error: number ~> string
          ^^^ [2]


Error ------------------------------------------------------------------------------------------------ no_infer.js:13:25

Cannot call `NoInferExported.f2` with `2` bound to `v2` because number [1] is incompatible with string [2].
[incompatible-call]

   no_infer.js:13:25
   13| NoInferExported.f2('1', 2); // error: number ~> string
                               ^ [1]

References:
   no_infer.js:13:20
   13| NoInferExported.f2('1', 2); // error: number ~> string
                          ^^^ [2]


Error ------------------------------------------------------------------------------------------------ no_infer.js:15:29

Cannot call `NoInferExported.f4` with object literal bound to `v2` because number [1] is incompatible with string [2] in
property `f`. [incompatible-call]

   no_infer.js:15:29
   15| NoInferExported.f4('1', {f: 2}); // error: number ~> string
                                   ^ [1]

References:
   no_infer.js:15:20
   15| NoInferExported.f4('1', {f: 2}); // error: number ~> string
                          ^^^ [2]


Error ------------------------------------------------------------------------------------------------- no_infer.js:19:1

Cannot cast `3` to `ConditionalNoInferToplevel` because number [1] is incompatible with string [2]. [incompatible-cast]

   no_infer.js:19:1
   19| 3 as ConditionalNoInferToplevel<string>; // error: number ~> string
       ^ [1]

References:
   no_infer.js:19:6
   19| 3 as ConditionalNoInferToplevel<string>; // error: number ~> string
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- no_infer.js:23:1

Cannot cast `3` to `ConditionalNoInferNested` because number [1] is incompatible with string [2]. [incompatible-cast]

   no_infer.js:23:1
   23| 3 as ConditionalNoInferNested<string>; // error: number ~> string
       ^ [1]

References:
   no_infer.js:23:6
   23| 3 as ConditionalNoInferNested<string>; // error: number ~> string
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- no_infer.js:30:7

Cannot call `f5` with `'1'` bound to `v2` because string [1] is incompatible with number literal `1` [2].
[incompatible-call]

   no_infer.js:30:7
   30| f5(1, '1'); // error: string ~> number
             ^^^ [1]

References:
   no_infer.js:27:15
   27|   v2: NoInfer<1 extends infer V ? V : string>
                     ^ [2]


Error ------------------------------------------------------------------------------------------------ no_infer.js:34:15

Cannot instantiate `$Call` because `V` [1] is underconstrained by `$Call` [2]. Either add explicit type arguments or
cast the expression to your expected type. [underconstrained-implicit-instantiation]

   no_infer.js:34:15
   34|   v2: NoInfer<$Call<<V>(V) => V, 1>> // error: underconstrained
                     ^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   no_infer.js:34:22
   34|   v2: NoInfer<$Call<<V>(V) => V, 1>> // error: underconstrained
                            ^ [1]


Error ------------------------------------------------------------------------------------------------ no_infer.js:43:17

Cannot call `f7` with object literal bound to `v2` because number [1] is incompatible with string [2] in property `a`.
[incompatible-call]

   no_infer.js:43:17
   43| f7({a: ''}, {a: 3}); // error: number ~> string
                       ^ [1]

References:
   no_infer.js:40:32
   40|   v2: NoInfer<{[K in keyof T]: T[K]}>
                                      ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ no_infer.js:47:15

Cannot instantiate `$ObjMap` because function type [1] is not a valid argument of `$ObjMap` [2]. [incompatible-use]

   no_infer.js:47:15
   47|   v2: NoInfer<$ObjMap<<V>(V) => V, {a: string}>> // error: underconstrained
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   no_infer.js:47:23
   47|   v2: NoInfer<$ObjMap<<V>(V) => V, {a: string}>> // error: underconstrained
                             ^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ polyt_flow_error.js:2:7

Cannot call `first` with `1` bound to the first parameter because number [1] is incompatible with array type [2].
[incompatible-call]

   polyt_flow_error.js:2:7
   2| first(1); // Incompatibility error, but no error on under-constrained T
            ^ [1]

References:
   polyt_flow_error.js:1:27
   1| declare function first<T>(Array<T>): ?T;
                                ^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- speculation.js:21:9

An annotation on rest parameter `args` is required because Flow cannot infer its type from local context.
[missing-local-annot]

   21|     (...args) => {
               ^^^^


Error ---------------------------------------------------------------------------------------- typeapp_expansion.js:54:4

Cannot cast `Spreaded` to `Opaque` because property `foo` is missing in object type [1] but exists in object type [2] in
type argument `T` [3]. [prop-missing]

   typeapp_expansion.js:54:4
   54|   (Spreaded: Opaque<{}>); // error: {} ~> Foo
          ^^^^^^^^

References:
   typeapp_expansion.js:54:21
   54|   (Spreaded: Opaque<{}>); // error: {} ~> Foo
                           ^^ [1]
   typeapp_expansion.js:40:13
   40|   ): Opaque<{...P2}>;
                   ^^^^^^^ [2]
   typeapp_expansion.js:31:31
   31|   declare opaque type Opaque<-T>;
                                     ^ [3]


Error ------------------------------------------------------------------------ underconstrained_class_constructor.js:5:5

Cannot call `A` because `T` [1] is underconstrained by new `A` [2]. Either add explicit type arguments or cast the
expression to your expected type. [underconstrained-implicit-instantiation]

   underconstrained_class_constructor.js:5:5
   5| new A(); // Error: T underconstrained
          ^

References:
   underconstrained_class_constructor.js:2:17
   2| declare class A<T>{
                      ^ [1]
   underconstrained_class_constructor.js:5:1
   5| new A(); // Error: T underconstrained
      ^^^^^^^ [2]


Error ----------------------------------------------------------------------- underconstrained_class_constructor.js:18:5

Cannot call `Array` because `T` [1] is underconstrained by new `Array` [2]. Either add explicit type arguments or cast
the expression to your expected type. [underconstrained-implicit-instantiation]

   underconstrained_class_constructor.js:18:5
    18| new Array(1); // Error
            ^^^^^

References:
   <BUILTINS>/core.js:948:21
   948| declare class Array<T> extends $ReadOnlyArray<T> {
                            ^ [1]
   underconstrained_class_constructor.js:18:1
    18| new Array(1); // Error
        ^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------- underconstrained_class_constructor.js:21:5

Cannot call `PolyClass1` because `T` [1] is underconstrained by new `PolyClass1` [2]. Either add explicit type arguments
or cast the expression to your expected type. [underconstrained-implicit-instantiation]

   underconstrained_class_constructor.js:21:5
   21| new PolyClass1(); // Error
           ^^^^^^^^^^

References:
   exported_poly_class.js:1:25
    1| export class PolyClass1<T> {}
                               ^ [1]
   underconstrained_class_constructor.js:21:1
   21| new PolyClass1(); // Error
       ^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------- underconstrained_class_constructor.js:22:5

Cannot call `PolyClass2` because `T` [1] is underconstrained by new `PolyClass2` [2]. Either add explicit type arguments
or cast the expression to your expected type. [underconstrained-implicit-instantiation]

   underconstrained_class_constructor.js:22:5
   22| new PolyClass2(); // Error
           ^^^^^^^^^^

References:
   exported_poly_class.js:2:25
    2| export class PolyClass2<T> {
                               ^ [1]
   underconstrained_class_constructor.js:22:1
   22| new PolyClass2(); // Error
       ^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------- underconstrained_fun_call.js:3:1

Cannot call `f` because `T` [1] is underconstrained by call of `f` [2]. Either add explicit type arguments or cast the
expression to your expected type. [underconstrained-implicit-instantiation]

   underconstrained_fun_call.js:3:1
   3| f(); // Error: T underconstrained
      ^

References:
   underconstrained_fun_call.js:2:20
   2| declare function f<T>(): T;
                         ^ [1]
   underconstrained_fun_call.js:3:1
   3| f(); // Error: T underconstrained
      ^^^ [2]


Error -------------------------------------------------------------------------------- underconstrained_fun_call.js:12:1

Cannot call `i` because `T` [1] is underconstrained by call of `i` [2]. Either add explicit type arguments or cast the
expression to your expected type. [underconstrained-implicit-instantiation]

   underconstrained_fun_call.js:12:1
   12| i(); // Error: T underconstrained
       ^

References:
   underconstrained_fun_call.js:11:20
   11| declare function i<T>(): Array<T>;
                          ^ [1]
   underconstrained_fun_call.js:12:1
   12| i(); // Error: T underconstrained
       ^^^ [2]


Error ------------------------------------------------------------------------------------ underconstrained_react.js:7:2

Cannot create `PolyReactClass` element because `T` [1] is underconstrained by `PolyReactClass` element [2]. Either add
explicit type arguments or cast the expression to your expected type. [underconstrained-implicit-instantiation]

   underconstrained_react.js:7:2
   7| <PolyReactClass />;
       ^^^^^^^^^^^^^^

References:
   underconstrained_react.js:5:22
   5| class PolyReactClass<T> extends React.Component<{}> {}
                           ^ [1]
   underconstrained_react.js:7:1
   7| <PolyReactClass />;
      ^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------- underconstrained_react.js:11:2

Cannot create `PolyFunctionComponent` element because `T` [1] is underconstrained by `PolyFunctionComponent`
element [2]. Either add explicit type arguments or cast the expression to your expected type.
[underconstrained-implicit-instantiation]

   underconstrained_react.js:11:2
   11| <PolyFunctionComponent foo={() => {}}/>;
        ^^^^^^^^^^^^^^^^^^^^^

References:
   underconstrained_react.js:9:32
    9| function PolyFunctionComponent<T>(props: {foo: ({x: T} => mixed)}): React.Node { return null }
                                      ^ [1]
   underconstrained_react.js:11:1
   11| <PolyFunctionComponent foo={() => {}}/>;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:11:1

Cannot call `ReposLowerTRegressionTest` because `T` [1] is underconstrained by call of `ReposLowerTRegressionTest` [2].
Either add explicit type arguments or cast the expression to your expected type.
[underconstrained-implicit-instantiation]

   upper_non_t.js:11:1
   11| ReposLowerTRegressionTest({}); // Error: T under constrained.
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   upper_non_t.js:10:44
   10| declare function ReposLowerTRegressionTest<T>({o?: T}): T;
                                                  ^ [1]
   upper_non_t.js:11:1
   11| ReposLowerTRegressionTest({}); // Error: T under constrained.
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:21:1

Cannot call `IndexedAccess1` because `T` [1] is underconstrained by call of `IndexedAccess1` [2]. Either add explicit
type arguments or cast the expression to your expected type. [underconstrained-implicit-instantiation]

   upper_non_t.js:21:1
   21| IndexedAccess1(1); // Error: T under constrained.
       ^^^^^^^^^^^^^^

References:
   upper_non_t.js:20:33
   20| declare function IndexedAccess1<T>(T['f']): T;
                                       ^ [1]
   upper_non_t.js:21:1
   21| IndexedAccess1(1); // Error: T under constrained.
       ^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:23:1

Cannot call `IndexedAccess2` because `T` [1] is underconstrained by call of `IndexedAccess2` [2]. Either add explicit
type arguments or cast the expression to your expected type. [underconstrained-implicit-instantiation]

   upper_non_t.js:23:1
   23| IndexedAccess2(1); // Error: T under constrained.
       ^^^^^^^^^^^^^^

References:
   upper_non_t.js:22:33
   22| declare function IndexedAccess2<T>(T[number]): T;
                                       ^ [1]
   upper_non_t.js:23:1
   23| IndexedAccess2(1); // Error: T under constrained.
       ^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:25:1

Cannot call `Call` because `T` [1] is underconstrained by call of `Call` [2]. Either add explicit type arguments or cast
the expression to your expected type. [underconstrained-implicit-instantiation]

   upper_non_t.js:25:1
   25| Call(undefined); // Error: T under constrained.
       ^^^^

References:
   upper_non_t.js:24:23
   24| declare function Call<T>($Call<T, <V>(V) => void>): T;
                             ^ [1]
   upper_non_t.js:25:1
   25| Call(undefined); // Error: T under constrained.
       ^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:27:1

Cannot call `ObjMap` because `T` [1] is underconstrained by call of `ObjMap` [2]. Either add explicit type arguments or
cast the expression to your expected type. [underconstrained-implicit-instantiation]

   upper_non_t.js:27:1
   27| ObjMap({}); // Error: T under constrained.
       ^^^^^^

References:
   upper_non_t.js:26:25
   26| declare function ObjMap<T>($ObjMap<T, <V>(V) => void>): T;
                               ^ [1]
   upper_non_t.js:27:1
   27| ObjMap({}); // Error: T under constrained.
       ^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:29:1

Cannot call `Values` because `T` [1] is underconstrained by call of `Values` [2]. Either add explicit type arguments or
cast the expression to your expected type. [underconstrained-implicit-instantiation]

   upper_non_t.js:29:1
   29| Values(3); // Error: T under constrained.
       ^^^^^^

References:
   upper_non_t.js:28:25
   28| declare function Values<T>($Values<T>): T;
                               ^ [1]
   upper_non_t.js:29:1
   29| Values(3); // Error: T under constrained.
       ^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:31:1

Cannot call `ElementRef` because `T` [1] is underconstrained by call of `ElementRef` [2]. Either add explicit type
arguments or cast the expression to your expected type. [underconstrained-implicit-instantiation]

   upper_non_t.js:31:1
   31| ElementRef(1); // Error: T under constrained.
       ^^^^^^^^^^

References:
   upper_non_t.js:30:29
   30| declare function ElementRef<T>(React$ElementRef<T>): T;
                                   ^ [1]
   upper_non_t.js:31:1
   31| ElementRef(1); // Error: T under constrained.
       ^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:55:6

Cannot get `s1.bad` because property `bad` (did you mean `bar`?) is missing in object literal [1]. [prop-missing]

   upper_non_t.js:55:6
   55|   s1.bad; // error
            ^^^

References:
   upper_non_t.js:51:22
   51|   const s1 = spread1({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:59:6

Cannot get `s2.bad` because property `bad` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:59:6
   59|   s2.bad; // error
            ^^^

References:
   upper_non_t.js:57:22
   57|   const s2 = spread2({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:60:6

Cannot get `s2.bar` because property `bar` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:60:6
   60|   s2.bar; // error
            ^^^

References:
   upper_non_t.js:57:22
   57|   const s2 = spread2({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:61:6

Cannot get `s2.baz` because property `baz` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:61:6
   61|   s2.baz; // error
            ^^^

References:
   upper_non_t.js:57:22
   57|   const s2 = spread2({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:65:6

Cannot get `s3.bad` because property `bad` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:65:6
   65|   s3.bad; // error
            ^^^

References:
   upper_non_t.js:63:22
   63|   const s3 = spread3({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:66:6

Cannot get `s3.bar` because property `bar` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:66:6
   66|   s3.bar; // error
            ^^^

References:
   upper_non_t.js:63:22
   63|   const s3 = spread3({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:67:6

Cannot get `s3.baz` because property `baz` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:67:6
   67|   s3.baz; // error
            ^^^

References:
   upper_non_t.js:63:22
   63|   const s3 = spread3({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:71:6

Cannot get `s4.bad` because property `bad` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:71:6
   71|   s4.bad; // error
            ^^^

References:
   upper_non_t.js:69:22
   69|   const s4 = spread4({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:72:6

Cannot get `s4.bar` because property `bar` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:72:6
   72|   s4.bar; // error
            ^^^

References:
   upper_non_t.js:69:22
   69|   const s4 = spread4({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:73:6

Cannot get `s4.baz` because property `baz` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:73:6
   73|   s4.baz; // error
            ^^^

References:
   upper_non_t.js:69:22
   69|   const s4 = spread4({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:77:6

Cannot get `s5.bad` because property `bad` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:77:6
   77|   s5.bad; // error
            ^^^

References:
   upper_non_t.js:75:22
   75|   const s5 = spread5({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:78:6

Cannot get `s5.bar` because property `bar` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:78:6
   78|   s5.bar; // error
            ^^^

References:
   upper_non_t.js:75:22
   75|   const s5 = spread5({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:79:6

Cannot get `s5.baz` because property `baz` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:79:6
   79|   s5.baz; // error
            ^^^

References:
   upper_non_t.js:75:22
   75|   const s5 = spread5({foo: 3, bar: 2, baz: 1}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:83:6

Cannot get `s6.bad` because property `bad` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:83:6
   83|   s6.bad; // error
            ^^^

References:
   upper_non_t.js:81:22
   81|   const s6 = spread6({foo: 3, bar: 2, baz: 1, hhh: 0}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:84:6

Cannot get `s6.bar` because property `bar` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:84:6
   84|   s6.bar; // error
            ^^^

References:
   upper_non_t.js:81:22
   81|   const s6 = spread6({foo: 3, bar: 2, baz: 1, hhh: 0}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:85:6

Cannot get `s6.baz` because property `baz` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:85:6
   85|   s6.baz; // error
            ^^^

References:
   upper_non_t.js:81:22
   81|   const s6 = spread6({foo: 3, bar: 2, baz: 1, hhh: 0}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:91:6

Cannot get `sr.bad` because property `bad` (did you mean `bar`?) is missing in object literal [1]. [prop-missing]

   upper_non_t.js:91:6
   91|   sr.bad; // error
            ^^^

References:
   upper_non_t.js:88:34
   88|   const sr = spread_and_readonly({foo: 1, bar: ''});
                                        ^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:96:5

Cannot get `o.cp` because property `cp` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:96:5
   96|   o.cp; // error
           ^^

References:
   upper_non_t.js:95:22
   95|   const o = optional({cp, foo: '', bar: 3}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:97:5

Cannot get `o.foo` because property `foo` is missing in object literal [1]. [prop-missing]

   upper_non_t.js:97:5
   97|   o.foo; // error
           ^^^

References:
   upper_non_t.js:95:22
   95|   const o = optional({cp, foo: '', bar: 3}); // ok
                            ^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:107:6

Cannot get `r1.bad` because property `bad` is missing in `Array` [1]. [prop-missing]

   upper_non_t.js:107:6
   107|   r1.bad; // error
             ^^^

References:
   <BUILTINS>/core.js:948:15
   948| declare class Array<T> extends $ReadOnlyArray<T> {
                      ^^^^^ [1]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:111:3

Cannot cast `r2[2]` to empty because number literal `1` [1] is incompatible with empty [2]. [incompatible-cast]

   upper_non_t.js:111:3
   111|   r2[2] as empty; // error
          ^^^^^

References:
   upper_non_t.js:104:37
   104|   const r2 = ArrRest(...([1, 2] as [1, 2])); // ok
                                            ^ [1]
   upper_non_t.js:111:12
   111|   r2[2] as empty; // error
                   ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:111:3

Cannot cast `r2[2]` to empty because number literal `2` [1] is incompatible with empty [2]. [incompatible-cast]

   upper_non_t.js:111:3
   111|   r2[2] as empty; // error
          ^^^^^

References:
   upper_non_t.js:104:40
   104|   const r2 = ArrRest(...([1, 2] as [1, 2])); // ok
                                               ^ [1]
   upper_non_t.js:111:12
   111|   r2[2] as empty; // error
                   ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:112:6

Cannot get `r2.bad` because property `bad` is missing in `Array` [1]. [prop-missing]

   upper_non_t.js:112:6
   112|   r2.bad; // error
             ^^^

References:
   <BUILTINS>/core.js:948:15
   948| declare class Array<T> extends $ReadOnlyArray<T> {
                      ^^^^^ [1]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:126:6

Cannot call `f1` because string [1] is incompatible with number [2] in index 0. [incompatible-call]

   upper_non_t.js:126:6
   126|   f1(''); // error
             ^^ [1]

References:
   upper_non_t.js:123:17
   123|   function g(x: number): void {}
                        ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:131:6

Cannot call `f2` because string [1] is incompatible with number [2] in index 0. [incompatible-call]

   upper_non_t.js:131:6
   131|   f2('', 0); // error
             ^^ [1]

References:
   upper_non_t.js:128:17
   128|   function h(x: number, y: string): void {}
                        ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- upper_non_t.js:131:10

Cannot call `f2` because number [1] is incompatible with string [2] in index 1. [incompatible-call]

   upper_non_t.js:131:10
   131|   f2('', 0); // error
                 ^ [1]

References:
   upper_non_t.js:128:28
   128|   function h(x: number, y: string): void {}
                                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:136:6

Cannot call `f3` because string [1] is incompatible with number [2] in array element. [incompatible-call]

   upper_non_t.js:136:6
   136|   f3(''); // error
             ^^ [1]

References:
   upper_non_t.js:133:29
   133|   function i(...rest: Array<number>): void {}
                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:140:3

Cannot cast `v1` to empty because tuple type [1] is incompatible with empty [2]. [incompatible-cast]

   upper_non_t.js:140:3
   140|   v1 as empty; // error: tuple ~> empty
          ^^

References:
   upper_non_t.js:120:9
   120|     fn: (...TArguments) => mixed,
                ^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   upper_non_t.js:140:9
   140|   v1 as empty; // error: tuple ~> empty
                ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:146:3

Cannot cast `f4` to empty because tuple type [1] is incompatible with empty [2]. [incompatible-cast]

   upper_non_t.js:146:3
   146|   f4 as empty; // error: tuple ~> empty
          ^^

References:
   upper_non_t.js:142:40
   142|   declare function funArgRest<Rest>(f: (first: empty, second: empty, ...args: Rest) => mixed): Rest;
                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   upper_non_t.js:146:9
   146|   f4 as empty; // error: tuple ~> empty
                ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:151:3

Cannot call `Diff0` because `T` [1] is underconstrained by call of `Diff0` [2]. Either add explicit type arguments or
cast the expression to your expected type. [underconstrained-implicit-instantiation]

   upper_non_t.js:151:3
   151|   Diff0(); // error
          ^^^^^

References:
   upper_non_t.js:150:26
   150|   declare function Diff0<T>(): $Diff<T, {foo: number}>;
                                 ^ [1]
   upper_non_t.js:151:3
   151|   Diff0(); // error
          ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:157:3

Cannot cast `d1` to object type because number [1] is incompatible with string [2] in property `foo`. This property is
invariantly typed. See https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.
[incompatible-cast]

   upper_non_t.js:157:3
   157|   d1 as {|foo: string | number, bar: number|}; // error
          ^^

References:
   upper_non_t.js:157:25
   157|   d1 as {|foo: string | number, bar: number|}; // error
                                ^^^^^^ [1]
   upper_non_t.js:152:45
   152|   declare function Diff1<T>($Diff<T, {|foo: string|}>): T;
                                                    ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:158:6

Cannot get `d1.bad` because property `bad` (did you mean `bar`?) is missing in `$Diff` [1]. [prop-missing]

   upper_non_t.js:158:6
   158|   d1.bad; // error
             ^^^

References:
   upper_non_t.js:152:29
   152|   declare function Diff1<T>($Diff<T, {|foo: string|}>): T;
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:159:3

Cannot cast `d1` to empty because `$Diff` [1] is incompatible with empty [2]. [incompatible-cast]

   upper_non_t.js:159:3
   159|   d1 as empty; // error
          ^^

References:
   upper_non_t.js:152:29
   152|   declare function Diff1<T>($Diff<T, {|foo: string|}>): T;
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   upper_non_t.js:159:9
   159|   d1 as empty; // error
                ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:164:6

Cannot get `d2.bad` because property `bad` (did you mean `bar`?) is missing in `$Diff` [1]. [prop-missing]

   upper_non_t.js:164:6
   164|   d2.bad; // error
             ^^^

References:
   upper_non_t.js:160:29
   160|   declare function Diff2<T>($Diff<T, {|foo?: string|}>): T;
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:165:3

Cannot cast `d2` to empty because `$Diff` [1] is incompatible with empty [2]. [incompatible-cast]

   upper_non_t.js:165:3
   165|   d2 as empty; // error
          ^^

References:
   upper_non_t.js:160:29
   160|   declare function Diff2<T>($Diff<T, {|foo?: string|}>): T;
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   upper_non_t.js:165:9
   165|   d2 as empty; // error
                ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:170:6

Cannot get `d3.bad` because property `bad` (did you mean `bar`?) is missing in `$Diff` [1]. [prop-missing]

   upper_non_t.js:170:6
   170|   d3.bad; // error
             ^^^

References:
   upper_non_t.js:166:29
   166|   declare function Diff3<T>($Diff<T, {foo: string, ...}>): T;
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:171:3

Cannot cast `d3` to empty because `$Diff` [1] is incompatible with empty [2]. [incompatible-cast]

   upper_non_t.js:171:3
   171|   d3 as empty; // error
          ^^

References:
   upper_non_t.js:166:29
   166|   declare function Diff3<T>($Diff<T, {foo: string, ...}>): T;
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   upper_non_t.js:171:9
   171|   d3 as empty; // error
                ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- upper_non_t.js:172:3

Cannot cast `d3` to object type because inexact `$Diff` [1] is incompatible with exact object type [2].
[incompatible-exact]

   upper_non_t.js:172:3
   172|   d3 as {|foo: string, bar: number|}; // error
          ^^

References:
   upper_non_t.js:166:29
   166|   declare function Diff3<T>($Diff<T, {foo: string, ...}>): T;
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   upper_non_t.js:172:9
   172|   d3 as {|foo: string, bar: number|}; // error
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- upper_non_t.js:175:15

Cannot call `Diff4` because string [1] is incompatible with number [2]. [incompatible-call]

   upper_non_t.js:175:15
   175|   Diff4({bar: ''}); // error: number is incompatible with string
                      ^^ [1]

References:
   upper_non_t.js:173:49
   173|   declare function Diff4<T>($Diff<T, {[string]: number}>): T;
                                                        ^^^^^^ [2]



Found 72 errors
